# buffer-benchmarks

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
go/: Makefile  go.mod  go.sum
go/capnproto/: capnproto.go  capnproto_test.go
go/constants/: constants.go
go/flatbuffers/: flatbuffers.go  flatbuffers_test.go
go/gogoprotobuf/: gogoprotobuf.go  gogoprotobuf_test.go
go/protobuf/: protobuf.go  protobuf_test.go
rust/: Cargo.toml  Makefile  build.rs
rust/benches/: buffer_benchmarks.rs
rust/src/: constants.rs  flatbuffers.rs  lib.rs  prost.rs  protobuf.rs
rust/src/flatbuffers/: message_generated.rs
schemas/: message.capnp  message.fbs  message.proto
