[package]
name = "buffer-benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
flatbuffers = "22.10.26"
prost = "0.11.6"
protobuf = "3.2.0"

[build-dependencies]
prost-build = "0.11.6"
protobuf-codegen = "3.2.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "buffer_benchmarks"
harness = false
